--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <h1>Find your GitHub profile!</h1>
+    <h1>Search any  GitHub profile Here !</h1>
     <div class="container">
         
         <div class="box">
