--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -23,5 +24,35 @@
         </div>
     </div>
     <script src="index.js"></script>
+</body>
+</html>
+-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Github Profile Finder</title>
+    <link rel="stylesheet" href="page.css">
+</head>
+
+<body>
+    <div class="box">
+        <p id="heading">Github Profile Finder</p>
+
+        <input type="text" placeholder="Enter Github UserName" id="GetUsername">
+        <button>Search</button>
+        <img src="" alt=""  id="profile-pic"/>
+        <p class="name"></p>
+        <p class="bio"></p>
+        <p class="repos"></p>
+        <p class="followers"></p>
+        
+        <p class="following"></p>
+        <p class="location"></p>
+    </div>
+    <script src="index.js">
+
+    </script>
 </body>
 </html>
