--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Github Profile Finder</title>
-    <link rel="stylesheet" href="page.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
